forgot to clear buffer after each recording

--- a/app/index.html
+++ b/app/index.html
@@ -261,7 +261,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       li.appendChild(hf);
       recordingslist.appendChild(li);
     });
-	
+	rec.clear();
   }
 	<!-- If user denies access to microphone -->
 	  var onFail = function(e) {
