--- a/app/index.html
+++ b/app/index.html
@@ -220,6 +220,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -->
 
   </template>
+  <!-- build:js scripts/app.js -->
+  <script src="scripts/app.js"></script>		
+  <!-- endbuild-->
 
  <!-- Recording Functionality-->
 	<script>
