--- a/app/index.html
+++ b/app/index.html
@@ -57,14 +57,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
   
-  <!-- Load in recorder.js -->
+  <!-- Load in recorder.js Not needed?
   <script src="scripts\recorder.js"></script>
-  
-  <style type='text/css'>
-    ul { list-style: none; }
-    #recordingslist audio { display: block; margin-bottom: 10px; }
-  </style>
-
+  -->
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -140,12 +135,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p class="paper-font-body2">This is another card.</p>
               </paper-material>
 
-			  <!-- Testing purposes -->
-				<h1>Hello World!</h1>
-				<input onclick="startRecording(this)" type="button" value="start recording" />
-				<input onclick="stopRecording(this)" type="button" disabled value="stop recording and save" />
-				<h2>Recordings</h2>
-				<ul id="recordingslist"></ul>
+			  <!-- my-recorder Element-->
+				<my-recorder></my-recorder>
 			  
               <paper-material elevation="1" class="paper-font-body2">
                 <h1 id="license">License</h1>
@@ -223,69 +214,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>		
   <!-- endbuild-->
-
- <!-- Recording Functionality-->
-	<script>
-	<!-- Defining starting vars -- >
-	var rec;
-	var audio = document.querySelector('audio');
-	
-	window.URL = window.URL || window.webkitURL;
-	<!-- mozGetUserMedia deprecated but automatically switches -->
-  navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
-	
-	function startRecording(button) {
-	if (navigator.getUserMedia) {
-	  navigator.getUserMedia({audio: true}, onSuccess, onFail);
-	  button.disabled = true;
-	  button.nextElementSibling.disabled = false;
-	} else {
-	  console.log('navigator.getUserMedia not present');
-	}
-  }
-
-  function stopRecording(button) {
-	rec.stop();
-	button.disabled = true;
-	button.previousElementSibling.disabled = false;
-	console.log("Recording Stopped!");
-	rec.exportWAV(function(blob) {
-      var url = URL.createObjectURL(blob);
-      var li = document.createElement('li');
-      var au = document.createElement('audio');
-      var hf = document.createElement('a');
-      
-      au.controls = true;
-      au.src = url;
-      hf.href = url;
-      hf.download = new Date().toISOString() + '.wav';
-      hf.innerHTML = hf.download;
-      li.appendChild(au);
-      li.appendChild(hf);
-      recordingslist.appendChild(li);
-    });
-	rec.clear();
-  }
-	<!-- If user denies access to microphone -->
-	  var onFail = function(e) {
-	console.log('Access Denied!', e);
-  };
-
-  <!-- If user allows access to microphone -- >
-  var onSuccess = function(s) {
-	console.log("onSuccess");
-	 var context = new AudioContext();
-        var mediaStreamSource = context.createMediaStreamSource(s);
-        rec = new Recorder(mediaStreamSource);
-		<!-- Recording Begins -- >
-        rec.record();
-		
-		console.log("recording started");
-
-        <!-- Comment/Uncomment to allow real-time playback for users -- >
-         mediaStreamSource.connect(context.destination);
-  }
-	</script>
 </body>
 
 </html>
