added requirment of recorderjs and fix of recorderjs path

--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -6,7 +6,7 @@ but that may just be setting the buffer size.
 -->
 
 <!-- Load in recorder.js -->
-<script src="./node_modules/recorderjs/recorder.js"></script>
+<script src="../../node_modules/recorderjs/recorder.js"></script>
 
 <dom-module id="my-recorder">
 <template>
