--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -73,7 +73,7 @@ but that may just be setting the buffer size.
 	 var context = new AudioContext();
         var mediaStreamSource = context.createMediaStreamSource(s);
         rec = new Recorder(mediaStreamSource, {
-		worketPath: "../../node_modules/recorderjs/recorderWorker.js"
+		workerPath: "../../node_modules/recorderjs/recorderWorker.js"
 		});
 		
 		<!-- Recording Begins -- >
