created menu buttons for each function

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="home"></iron-icon>
             <span>Dashboard</span>
           </a>
+          <a data-route="record" href="{{baseUrl}}">
+            <iron-icon icon="home"></iron-icon>
+            <span>Record</span>
+          </a>
+          <a data-route="saved" href="{{baseUrl}}">
+            <iron-icon icon="home"></iron-icon>
+            <span>Saved</span>
+          </a>
+          <a data-route="tuning" href="{{baseUrl}}">
+            <iron-icon icon="home"></iron-icon>
+            <span>Tuning</span>
+          </a>
         </paper-menu>
       </paper-scroll-header-panel>
 
