--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
 
-  <!-- Load in recorder.js Not needed?
+  <!-- Load in recorder.js -->
   <script src="scripts\recorder.js"></script>
-  -->
 </head>
 
 <body unresolved class="fullbleed layout vertical">
@@ -139,8 +138,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p class="paper-font-body2">This is another card.</p>
               </paper-material>
 
-				<my-recorder></my-recorder>
-
               <paper-material elevation="1" class="paper-font-body2">
                 <h1 id="license">License</h1>
                 <p>Everything in this repo is BSD style license unless otherwise specified.</p>
@@ -165,6 +162,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <h2 class="page-title">Record</h2>
                 <p>This is the recording section</p>
+                <my-recorder></my-recorder>
               </paper-material>
             </section>
 
