--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <style is="custom-style" include="shared-styles"></style>
 
   <!-- Load in recorder.js -->
-  <script src="scripts\recorder.js"></script>
+  <script src="node_modules/recorderjs/recorder.js"></script>
+
 </head>
 
 <body unresolved class="fullbleed layout vertical">
