--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -6,17 +6,19 @@ but that may just be setting the buffer size.
 -->
 
 <!-- Load in recorder.js -->
-<link rel="import" href='../../../node_modules/recorderjs/recorder.js'>
+<link rel='import' href='../../../node_modules/recorderjs/recorder.js'>
 
-<dom-module id="my-recorder">
+<dom-module id='my-recorder'>
 <template>
     <style type='text/css'>
         ul { list-style: none; }
         #recordingslist audio { display: block; margin-bottom: 10px; }
     </style>
-    <!-- Testing purposes -->
+    <p><canvas id='canvas' width='550' height='400'></canvas></p>
+    <p>
     <input onclick='startRecording(this)' type='button' value='start recording'/>
     <input onclick='stopRecording(this)' type='button' disabled value='stop recording and save'/>
+    </p>
     <h2>Recordings</h2>
      <ul id='recordingslist'></ul>
 </template>
@@ -26,13 +28,27 @@ Polymer({
   is: 'my-recorder', 
   properties: {}
 });
+
 var rec;
 var recordingslist;
+
 var audio = document.querySelector('audio');
 window.URL = window.URL || window.webkitURL;
+
 // mozGetUserMedia deprecated but automatically switches
-navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia || 
-navigator.mozGetUserMedia || navigator.msGetUserMedia;
+navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia ||
+ navigator.mozGetUserMedia || navigator.msGetUserMedia;
+var AudioContext = window.AudioContext || window.webkitAudioContext;
+var audioCtx = new AudioContext();
+
+var analyser = audioCtx.createAnalyser();
+analyser.fftSize = 2048;
+var bufferLength = analyser.frequencyBinCount;
+var dataArray = new Uint8Array(bufferLength);
+analyser.getByteTimeDomainData(dataArray);
+analyser.getByteFrequencyData(dataArray);
+
+//var canvas = document.createElement('canvas');
     
 // If user denies access to microphone
 var onFail = function(e) {
@@ -42,9 +58,8 @@ var onFail = function(e) {
 // If user allows access to microphone
 var onSuccess = function(s) {
   console.log('onSuccess');
-  var AudioContext = window.AudioContext || window.webkitAudioContext;
-  var audioCtx = new AudioContext();
   var mediaStreamSource = audioCtx.createMediaStreamSource(s);
+  mediaStreamSource.connect(analyser);
   rec = new window.Recorder(mediaStreamSource, {
       workerPath: '../../node_modules/recorderjs/recorderWorker.js'
     });
@@ -86,5 +101,35 @@ function stopRecording(button) {
   });
   rec.clear();
 }
+
+// draw an oscilloscope of the current audio source
+function draw() {
+  var canvasCtx = document.getElementById('canvas').getContext('2d');
+  var drawVisual = requestAnimationFrame(draw);
+  analyser.getByteTimeDomainData(dataArray);
+  canvasCtx.fillStyle = 'rgb(0, 0, 0)';
+  canvasCtx.fillRect(0, 0, canvasCtx.width, canvasCtx.height);
+  canvasCtx.lineWidth = 2;
+  canvasCtx.strokeStyle = 'rgb(0, 255, 255)';
+  canvasCtx.beginPath();
+  var sliceWidth = canvasCtx.width * 1.0 / bufferLength;
+  var x = 0;
+  for (var i = 0; i < bufferLength; i++) {
+    var v = dataArray[i] / 128.0;
+    var y = v * canvasCtx.height / 2;
+    if (i === 0) {
+      canvasCtx.moveTo(x, y);
+    } else {
+      canvasCtx.lineTo(x, y);
+    }
+    x += sliceWidth;
+  }
+  canvasCtx.lineTo(canvasCtx.width, canvasCtx.height / 2);
+  canvasCtx.stroke();
+}
+
+// Draw!
+draw();
+
 </script>
 </dom-module>
