--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -6,15 +6,15 @@ but that may just be setting the buffer size.
 -->
 
 <!-- Load in recorder.js -->
-<link rel='import' href='../../../node_modules/recorderjs/recorder.js'>
+<script src='../../../node_modules/recorderjs/recorder.js'></script>
 
 <dom-module id='my-recorder'>
-<template>
+<template onload='initializeCanvas()'>
     <style type='text/css'>
         ul { list-style: none; }
         #recordingslist audio { display: block; margin-bottom: 10px; }
     </style>
-    <p><canvas id='canvas' width='550' height='400'></canvas></p>
+    <p><canvas id='myCanvas' width='550' height='400'></canvas></p>
     <p>
     <input onclick='startRecording(this)' type='button' value='start recording'/>
     <input onclick='stopRecording(this)' type='button' disabled value='stop recording and save'/>
@@ -25,12 +25,13 @@ but that may just be setting the buffer size.
 
 <script>
 Polymer({
-  is: 'my-recorder', 
-  properties: {}
+  is: 'my-recorder'
 });
 
 var rec;
 var recordingslist;
+var myCanvas;
+var canvasCtx;
 
 var audio = document.querySelector('audio');
 window.URL = window.URL || window.webkitURL;
@@ -48,7 +49,31 @@ var dataArray = new Uint8Array(bufferLength);
 analyser.getByteTimeDomainData(dataArray);
 analyser.getByteFrequencyData(dataArray);
 
-//var canvas = document.createElement('canvas');
+function initializeCanvas() {
+  myCanvas = document.getElementById('myCanvas');
+  canvasCtx = myCanvas.getContext('2d');
+  var drawVisual = requestAnimationFrame(initializeCanvas);
+  analyser.getByteTimeDomainData(dataArray);
+  canvasCtx.fillStyle = 'rgb(0, 0, 0)';
+  canvasCtx.fillRect(0, 0, myCanvas.width, myCanvas.height);
+  canvasCtx.lineWidth = 2;
+  canvasCtx.strokeStyle = 'rgb(0, 255, 255)';
+  canvasCtx.beginPath();
+  var sliceWidth = myCanvas.width * 1.0 / bufferLength;
+  var x = 0;
+  for (var i = 0; i < bufferLength; i++) {
+    var v = dataArray[i] / 128.0;
+    var y = v * myCanvas.height / 2;
+    if (i === 0) {
+      canvasCtx.moveTo(x, y);
+    } else {
+      canvasCtx.lineTo(x, y);
+    }
+    x += sliceWidth;
+  }
+  canvasCtx.lineTo(myCanvas.width, myCanvas.height / 2);
+  canvasCtx.stroke();
+}
     
 // If user denies access to microphone
 var onFail = function(e) {
@@ -60,9 +85,7 @@ var onSuccess = function(s) {
   console.log('onSuccess');
   var mediaStreamSource = audioCtx.createMediaStreamSource(s);
   mediaStreamSource.connect(analyser);
-  rec = new window.Recorder(mediaStreamSource, {
-      workerPath: '../../node_modules/recorderjs/recorderWorker.js'
-    });
+  rec = new Recorder(mediaStreamSource);
   // Recording Begins
   rec.record();  
   console.log('recording started');
@@ -101,35 +124,6 @@ function stopRecording(button) {
   });
   rec.clear();
 }
-
-// draw an oscilloscope of the current audio source
-function draw() {
-  var canvasCtx = document.getElementById('canvas').getContext('2d');
-  var drawVisual = requestAnimationFrame(draw);
-  analyser.getByteTimeDomainData(dataArray);
-  canvasCtx.fillStyle = 'rgb(0, 0, 0)';
-  canvasCtx.fillRect(0, 0, canvasCtx.width, canvasCtx.height);
-  canvasCtx.lineWidth = 2;
-  canvasCtx.strokeStyle = 'rgb(0, 255, 255)';
-  canvasCtx.beginPath();
-  var sliceWidth = canvasCtx.width * 1.0 / bufferLength;
-  var x = 0;
-  for (var i = 0; i < bufferLength; i++) {
-    var v = dataArray[i] / 128.0;
-    var y = v * canvasCtx.height / 2;
-    if (i === 0) {
-      canvasCtx.moveTo(x, y);
-    } else {
-      canvasCtx.lineTo(x, y);
-    }
-    x += sliceWidth;
-  }
-  canvasCtx.lineTo(canvasCtx.width, canvasCtx.height / 2);
-  canvasCtx.stroke();
-}
-
-// Draw!
-draw();
 
 </script>
 </dom-module>
