start of my-tuner

--- a/app/index.html
+++ b/app/index.html
@@ -175,6 +175,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <h2 class="page-title">Tuning</h2>
                 <p>This is the instrument tuner</p>
+                <my-tuner></my-tuner>
               </paper-material>
             </section>
 
