--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,3 +40,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="my-recorder/my-recorder.html">
+<link rel="import" href="my-tuner/my-tuner.html">
+
