added buttons to tuner

--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -12,8 +12,8 @@ Using recorder.js module to record audio input from user and send to parsing
         #recordingslist audio { display: block; margin-bottom: 10px; }
     </style>
     <p>
-    <input onclick='startRecording(this)' type='button' value='start recording'/>
-    <input onclick='stopRecording(this)' type='button' disabled value='stop recording and save'/>
+    <input onclick='startRecording(this)' type='button' value='Start Recording'/>
+    <input onclick='stopRecording(this)' type='button' disabled value='Stop Recording'/>
     </p>
     <h2>Recordings</h2>
      <ul id='recordingslist'></ul>
