--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -1,8 +1,16 @@
+<!--
+Tuning application using AnalyzerNode and Web Audio API to stream and visualize
+-->
+
 <dom-module id='my-tuner'>
 <template>
     <style type='text/css'>
     </style>
-    <p><canvas id='myCanvas' width='550' height='400' onload="initCanvas()"></canvas></p>
+    <p>
+    <input onclick='startAudioStream(this)' type='button' value='Use live audio'/>
+    <input onclick='stopAudioStream(this)' type='button' disabled value='Stop'/>
+    </p>
+    <p><canvas id='tunerCanvas' width='550' height='400' onload='initCanvas()'></canvas></p>
     test
 </template>
 
@@ -10,7 +18,7 @@
 Polymer({
   is: 'my-tuner',
   ready: function() {  
-    console.log(document.getElementsByTagName(this.$.myCanvas));
+    console.log(document.getElementsByTagName('tunerCanvas'));
   }
 });
 
@@ -24,6 +32,7 @@ navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia
  navigator.mozGetUserMedia || navigator.msGetUserMedia;
 var AudioContext = window.AudioContext || window.webkitAudioContext;
 var audioCtx = new AudioContext();
+var isStreaming = false;
 
 var analyser = audioCtx.createAnalyser();
 analyser.fftSize = 2048;
@@ -31,6 +40,11 @@ var bufferLength = analyser.frequencyBinCount;
 var dataArray = new Uint8Array(bufferLength);
 analyser.getByteTimeDomainData(dataArray);
 analyser.getByteFrequencyData(dataArray);
+
+function initCanvas() {
+  myCanvas = document.getElementsByTagName('tunerCanvas');
+  canvasCtx = myCanvas.getContext('2d');
+}
 
 function draw() {
   var drawVisual = requestAnimationFrame(draw);
@@ -54,13 +68,6 @@ function draw() {
   }
   canvasCtx.lineTo(myCanvas.width, myCanvas.height / 2);
   canvasCtx.stroke();
-  draw();
-}
-
-function initCanvas() {
-  myCanvas = document.getElementsByTagName(this.$.myCanvas);
-  canvasCtx = myCanvas.getContext('2d');
-  draw();
 }
 
 // If user denies access to microphone
@@ -70,18 +77,35 @@ var onFail = function(e) {
     
 // If user allows access to microphone
 var onSuccess = function(s) {
+  isStreaming = true;
   console.log('onSuccess');
   var mediaStreamSource = audioCtx.createMediaStreamSource(s);
   mediaStreamSource.connect(analyser);
   // Comment/Uncomment to allow real-time playback for users
   mediaStreamSource.connect(audioCtx.destination);
+
+  while (isStreaming) {
+    draw();
+  }
 };
 
-if (navigator.getUserMedia) {
-  navigator.getUserMedia({audio: true}, onSuccess, onFail);
-} else {
-  console.log('navigator.getUserMedia not present');
+function startAudioStream(button) {
+  if (navigator.getUserMedia) {
+    button.disabled = true;
+    button.nextElementSibling.disabled = false;
+    navigator.getUserMedia({audio: true}, onSuccess, onFail);
+  } else {
+    console.log('navigator.getUserMedia not present');
+  }
 }
 
+function stopAudioStream(button) {
+  button.disabled = true;
+  button.previousElementSibling.disabled = false;
+  isStreaming = false;
+  mediaStreamSource.stopAudioStream();
+}
+
+draw();
 </script>
 </dom-module>
