possible canvas fix

--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h2 class="page-title">Tuning</h2>
                 <p>This is the instrument tuner</p>
                 <my-tuner></my-tuner>
+                <p><canvas id='tunerCanvas' width='550' height='400' 
+                style="border: 1px solid rgb(170, 170, 170);  left: 10px; top: 10px; -moz-user-select: none;"></canvas></p>
               </paper-material>
             </section>
 
