--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -10,26 +10,31 @@ Tuning application using AnalyzerNode and Web Audio API to stream and visualize
     <input onclick='startAudioStream(this)' type='button' value='Use live audio'/>
     <input onclick='stopAudioStream(this)' type='button' disabled value='Stop'/>
     </p>
-    <p><canvas id='tunerCanvas' width='550' height='400' onload='initCanvas()'></canvas></p>
-    test
 </template>
 
 <script>
+var canvas;
+var canvasCtx;
+function init() {
+  canvas = document.getElementId('tunerCanvas');
+  canvasCtx = canvas.getContext('2d');
+  console.log('canvas initialized');
+}
+
 Polymer({
   is: 'my-tuner',
-  ready: function() {  
+  ready: function() {
     console.log(document.getElementsByTagName('tunerCanvas'));
+    window.onload = function() {
+      init();
+    };
   }
 });
 
-var myCanvas;
-var canvasCtx;
+var mediaStreamSource;
 var audio = document.querySelector('audio');
 window.URL = window.URL || window.webkitURL;
 
-// mozGetUserMedia deprecated but automatically switches
-navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia ||
- navigator.mozGetUserMedia || navigator.msGetUserMedia;
 var AudioContext = window.AudioContext || window.webkitAudioContext;
 var audioCtx = new AudioContext();
 var isStreaming = false;
@@ -41,24 +46,19 @@ var dataArray = new Uint8Array(bufferLength);
 analyser.getByteTimeDomainData(dataArray);
 analyser.getByteFrequencyData(dataArray);
 
-function initCanvas() {
-  myCanvas = document.getElementsByTagName('tunerCanvas');
-  canvasCtx = myCanvas.getContext('2d');
-}
-
 function draw() {
   var drawVisual = requestAnimationFrame(draw);
   analyser.getByteTimeDomainData(dataArray);
   canvasCtx.fillStyle = 'rgb(0, 0, 0)';
-  canvasCtx.fillRect(0, 0, myCanvas.width, myCanvas.height);
+  canvasCtx.fillRect(0, 0, canvas.width, canvas.height);
   canvasCtx.lineWidth = 2;
   canvasCtx.strokeStyle = 'rgb(0, 255, 255)';
   canvasCtx.beginPath();
-  var sliceWidth = myCanvas.width * 1.0 / bufferLength;
+  var sliceWidth = canvas.width * 1.0 / bufferLength;
   var x = 0;
   for (var i = 0; i < bufferLength; i++) {
     var v = dataArray[i] / 128.0;
-    var y = v * myCanvas.height / 2;
+    var y = v * canvas.height / 2;
     if (i === 0) {
       canvasCtx.moveTo(x, y);
     } else {
@@ -66,7 +66,7 @@ function draw() {
     }
     x += sliceWidth;
   }
-  canvasCtx.lineTo(myCanvas.width, myCanvas.height / 2);
+  canvasCtx.lineTo(canvas.width, canvas.height / 2);
   canvasCtx.stroke();
 }
 
@@ -78,8 +78,8 @@ var onFail = function(e) {
 // If user allows access to microphone
 var onSuccess = function(s) {
   isStreaming = true;
-  console.log('onSuccess');
-  var mediaStreamSource = audioCtx.createMediaStreamSource(s);
+  console.log('Streaming!');
+  mediaStreamSource = audioCtx.createMediaStreamSource(s);
   mediaStreamSource.connect(analyser);
   // Comment/Uncomment to allow real-time playback for users
   mediaStreamSource.connect(audioCtx.destination);
@@ -90,6 +90,8 @@ var onSuccess = function(s) {
 };
 
 function startAudioStream(button) {
+  navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia || 
+  navigator.mozGetUserMedia || navigator.msGetUserMedia;
   if (navigator.getUserMedia) {
     button.disabled = true;
     button.nextElementSibling.disabled = false;
@@ -100,12 +102,12 @@ function startAudioStream(button) {
 }
 
 function stopAudioStream(button) {
+  console.log('Streaming Stopped!');
   button.disabled = true;
   button.previousElementSibling.disabled = false;
   isStreaming = false;
-  mediaStreamSource.stopAudioStream();
+  navigator.getUserMedia = false;
 }
 
-draw();
 </script>
 </dom-module>
