--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -38,15 +38,12 @@ code { color: blue; padding: 2px;}
 </head>
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="../../pitchdetector.js"></script>
-<script src="pitchdetectorcanvas.js"></script>
-<script src="gui.js"></script>
+<script src="../../scripts/pitchdetector.js"></script>
+<script src="../../scripts/pitchdetectorcanvas.js"></script>
+<script src="../../scripts/gui.js"></script>
 
 <div>
 <h1>Pitch Detector</h1>
-<p>
-  Calculated using the <a href="http://en.wikipedia.org/wiki/Autocorrelation" target="_blank">auto-correlation</a> algorithm for every frequency.
-</p>
 <table>
 <tr>
   <td>input:</td>
