--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -4,7 +4,9 @@ Tuning application using AnalyzerNode and Web Audio API to stream and visualize
 
 <dom-module id='my-tuner'>
 <template>
-
+<script src="../../scripts/gui.js"></script>
+<script src="../../scripts/pitchdetector.js"></script>
+<script src="../../scripts/pitchdetectorcanvas.js"></script>
 <style>
 body { font-family: serif;}
 #note { font-size: 160px; }
@@ -36,12 +38,6 @@ p {clear: both; padding-top: 15px;}
 code { color: blue; padding: 2px;}
 </style>
 
-</head>
-<body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="../../scripts/gui.js"></script>
-<script src="../../scripts/pitchdetector.js"></script>
-<script src="../../scripts/pitchdetectorcanvas.js"></script>
 <div>
 <h1>Pitch Detector</h1>
 <table>
@@ -75,9 +71,6 @@ code { color: blue; padding: 2px;}
   <td>length:</td>
   <td>
     <select id="length">
-      <option value="1024">1024</option>
-      <option value="1024">512</option>
-      <option value="256">256</option>
       <option value="2048">2048</option>
     </select>
     Audio Buffer Length
@@ -171,24 +164,17 @@ code { color: blue; padding: 2px;}
 
 <div class="box">
 <canvas id="waveform" width="512" height="256"></canvas>
-<p>
-<strong>Y-Axis</strong>: RMS (Red), Auto-Correlation Increase (Blue), Auto-Correlation Score (Black).
-<br/>
-<strong>X-Axis</strong>: Frequency range (2-512 samples  = 22.05 kHz - 83 Hz = F10 - E2) and detection area (Green)
-</p>
-<h4>Pitch Detector Settings:</h4>
 <pre id="settings"></pre>
 </div>
 
-</body>
 </template>
 
 <script>
-var canvas;
+var tunerCanvas;
 var canvasCtx;
 function init() {
-  canvas = document.getElementById('tunerCanvas');
-  canvasCtx = canvas.getContext('2d');
+  tunerCanvas = document.getElementById('tunerCanvas');
+  canvasCtx = tunerCanvas.getContext('2d');
   console.log('canvas initialized');
 }
 
@@ -221,15 +207,15 @@ function drawCanvas() {
   var drawVisual = requestAnimationFrame(drawCanvas);
   analyser.getByteTimeDomainData(dataArray);
   canvasCtx.fillStyle = 'rgb(0, 0, 0)';
-  canvasCtx.fillRect(0, 0, canvas.width, canvas.height);
+  canvasCtx.fillRect(0, 0, tunerCanvas.width, tunerCanvas.height);
   canvasCtx.lineWidth = 2;
   canvasCtx.strokeStyle = 'rgb(0, 255, 255)';
   canvasCtx.beginPath();
-  var sliceWidth = canvas.width * 1.0 / bufferLength;
+  var sliceWidth = tunerCanvas.width * 1.0 / bufferLength;
   var x = 0;
   for (var i = 0; i < bufferLength; i++) {
     var v = dataArray[i] / 128.0;
-    var y = v * canvas.height / 2;
+    var y = v * tunerCanvas.height / 2;
     if (i === 0) {
       canvasCtx.moveTo(x, y);
     } else {
@@ -237,7 +223,7 @@ function drawCanvas() {
     }
     x += sliceWidth;
   }
-  canvasCtx.lineTo(canvas.width, canvas.height / 2);
+  canvasCtx.lineTo(tunerCanvas.width, tunerCanvas.height / 2);
   canvasCtx.stroke();
 }
 
@@ -253,7 +239,7 @@ var onSuccess = function(s) {
   mediaStreamSource = audioCtx.createMediaStreamSource(s);
   mediaStreamSource.connect(analyser);
   // Comment/Uncomment to allow real-time playback for users
-  mediaStreamSource.connect(audioCtx.destination);
+  //mediaStreamSource.connect(audioCtx.destination);
 };
 
 navigator.getUserMedia  = navigator.getUserMedia || 
