--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -44,8 +44,8 @@ code { color: blue; padding: 2px;}
 
 <div>
   <div>
-      <button onclick="start()" id="start">Start Tuner</button>
-      <button onclick="stop()" id="stop">Stop</button>
+      <paper-button raised onclick="start()" id="start">Start Tuner</paper-button>
+      <paper-button raised onclick="stop()" id="stop">Stop</paper-button>
   </div>
 
   <div class="pitch">
