css styling to buttons

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -43,6 +43,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /* paper-menu */
     --paper-menu-background-color: #fff;
     --menu-link-color: #111111;
+
+    --paper-button-ink-color: var(--paper-pink-a200);
+    --paper-button-raised-keyboard-focus: {
+      background-color: var(--paper-pink-a200) !important;
+      color: white !important;
+    };
   }
 
   /* General styles */
