--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -44,8 +44,8 @@ code { color: blue; padding: 2px;}
 <div>
   <div>
 
-      <paper-button raised onclick="start()" id="start">Start Tuner</paper-button>
-      <paper-button raised onclick="stop()" id="stop">Stop</paper-button>
+      <paper-button raised onclick="start()" id="start" style="width:330px;height:60px;font-size:25px; font-weight:bold;">Start Tuner</paper-button>
+      <paper-button raised onclick="stop()" id="stop" style="width:330px;height:60px;font-size:25px; font-weight:bold;">Stop</paper-button>
   </div>
 
   <div class="pitch">
