--- a/app/index.html
+++ b/app/index.html
@@ -178,10 +178,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="tuning">
               <paper-material elevation="1" id='background'>
-                <h2 class="page-title">Tuning</h2>
                 <my-tuner></my-tuner>
-                <p><canvas id='tunerCanvas'
-                style='border: 1px solid rgb(170, 170, 170);left: 10px;top: 10px;width: 50%; -moz-user-select: none;'></canvas></p>
+                <p><canvas id='tunerCanvas' width="500" height="225"                style='border: 1px solid rgb(170, 170, 170);left: 10px;top: 10px;width: 60%; float: right -moz-user-select: none;'></canvas>
+                </p>
               </paper-material>
             </section>
 
